Database browser Also added a song queue to make the database more useful